# DiffMS

./: .gitignore  pyproject.toml
configs/general/: general_default.yaml
configs/train/: train_default.yaml
data_processing/: 00_download_fp2mol_data.sh  03_preprocess_fp2mol.sh  build_fp2mol_datasets.py
notebooks/: attention.ipynb
src/: diffusion_model_fp2mol.py  fp2mol_main.py  utils.py
src/datasets/: abstract_dataset.py  fp2mol_dataset.py
src/diffusion/: diffusion_utils.py  extra_features.py
src/metrics/: molecular_metrics_discrete.py
src/models/: layers.py  transformer_model.py
