[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diffms"
version = "1.2.2"
description = "DiffMS: Diffusion Generation of Molecules Conditioned on Mass Spectra"
requires-python = "==3.12.11"
dependencies = [
    "hydra-core",
    "matplotlib",
    "numpy",
    "omegaconf",
    "overrides",
    "pandas",
    "pytorch_lightning",
    "torch>=2.7",
    "torch_geometric",
    "torchmetrics",
    "tqdm",
    "wandb",
    "h5py",
    "seaborn",
    "myopic-mces",
    "tqdm-joblib",
    "pyarrow>=20.0.0",
    "huggingface-hub>=0.33.2",
]
authors = [
    {name = "Montgomery Bohde", email = "mbohde@tamu.edu"},
    {name = "Mrunali Manjrekar"},
    {name = "Runzhong Wang"},
    {name = "Shuiwang Ji"},
    {name = "Connor W. Coley"},
]
maintainers = [
    {name = "Montgomery Bohde", email = "mbohde@tamu.edu"}
]
readme = "README.md"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-geo"
url = "https://data.pyg.org/whl/torch-2.7.0+cu128.html"
explicit = true
